Modernize Behavior Annex code for Java 21
Raise the handwritten BA runtime, utility, contribution, and test projects to Java 21 and align their Eclipse compiler metadata. Modernize non-generated Java with pattern matching, switch expressions, sequenced collection access, JDK collection factories, and var where the initializer makes the type clear, while retaining Guava and preserving public behavior.